Made buttons more visible, fixed setting of code
git-svn-id: https://svn.rwth-aachen.de/repos/da026566_hpc/projects/ITC-Kaffestrichliste@5294 784e779e-19d6-4006-af7c-3b0eff316831

--- a/style/style.css
+++ b/style/style.css
@@ -36,7 +36,7 @@ div.content {
 	padding-left: 10px;
 	padding-right: 10px;
 	padding-top: 70px;
-	padding-bottom: 40px;
+	padding-bottom: 70px;
 	font-size: 20pt;
 
 }
@@ -196,6 +196,19 @@ div#progress {
 	
 }
 
+a.button {
+	 background-color: rgba(77, 57, 42, 0.9);
+	 padding: 20px;
+	 margin-top: 10px;
+	 display: block;
+	 text-align: center;
+	 
+}
+
+a.button:hover,
+a.button:active {
+	 background-color: rgba(159, 145, 132, 0.9);
+}
 
 div.codedisplay div.char{
 	background-color: rgb(159, 145, 132);
